tests/paczka1/small_fuzzy/44490078.err
Error in line 1: i0V7W25OLe A910 99,0
Error in line 2: oP3Wi A910 97,5
